# figcone_ini

./: CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml  release.yml
cmake/: figcone_iniConfig.cmake.in
include/figcone_ini/: parser.h
include/figcone_ini/detail/: paramparser.h  stream.h  utils.h
release_pack/: CMakeLists.txt  release.sh
release_pack/figcone_ini_deps/: CMakeLists.txt
src/: paramparser.cpp  paramparser.h  parser.cpp  stream.cpp  stream.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_nodelistparser.cpp  test_nodeparser.cpp  test_paramlistparser.cpp  test_paramparser.cpp
